Dev version of discrim.

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -58,6 +58,7 @@ Imports:
 Remotes: 
     hadley/emo,
     gadenbuie/tweetrmd,
+    tidymodels/discrim,
     tidymodels/embed,
     tidymodels/finetune,
     tidymodels/learntidymodels
