Termine el cohorte 01 (#11)
* Termine el cohorte 01

* Conflict issue.

* Remove tweetrmd

* extract_parameter_dials for deprecated fn

* It helps when you save!

* Hopefully this will do it!

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -54,10 +54,9 @@ Imports:
     tidyverse,
     tidytuesdayR,
     tufte,
-    tweetrmd,
-    workflowsets
+    workflowsets,
+    hardhat
 Remotes: 
     hadley/emo,
-    gadenbuie/tweetrmd,
     tidymodels/learntidymodels
 biocViews: mixOmics
