--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,7 +2,7 @@ Package: bookclub-tmwr_es
 Title: Modelado Tidy con R - Club de Lectura
 Version: 0.0.0.9000
 Authors@R: c(
-  person("R4DS Online Learning Community", role = c("aut", "cre", "cph"))
+  person("Data Science Learning Community", role = c("aut", "cre", "cph"))
   )
 URL: https://r4ds.github.io/bookclub-tmwr_es, https://github.com/r4ds/bookclub-tmwr_es
 Depends:
@@ -31,6 +31,7 @@ Imports:
     ggforce,
     ggfortify,
     glmnet,
+    hardhat,
     here,
     iBreakDown,
     janitor,
@@ -54,8 +55,7 @@ Imports:
     tidyverse,
     tidytuesdayR,
     tufte,
-    workflowsets,
-    hardhat
+    workflowsets
 Remotes: 
     hadley/emo,
     tidymodels/learntidymodels
